--- a/04_counter-app/package.json
+++ b/04_counter-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview", 
+    "preview": "vite preview",
     "test": "jest --watchAll"
   },
   "dependencies": {
@@ -14,9 +14,13 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@types/jest": "^28.1.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "babel-jest": "^28.1.1",
     "jest": "^28.1.1",
     "vite": "^2.9.9"
   }
